--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"react-scripts start\" \"json-server --watch data/db.json\"",
     "build": "webpack --mode=production --node-env=production",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -74,6 +74,8 @@
   },
   "devDependencies": {
     "@webpack-cli/generators": "^2.2.0",
+    "concurrently": "^6.2.0",
+    "json-server": "^0.16.3",
     "redux-devtools-extension": "^2.13.9"
   }
 }
