--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.10",
     "@types/react-dom": "^17.0.7",
     "antd": "^4.16.2",
+    "lodash": "^4.17.21",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -73,6 +74,7 @@
     "useTabs": false
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.170",
     "@webpack-cli/generators": "^2.2.0",
     "concurrently": "^6.2.0",
     "json-server": "^0.16.3",
