--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blue-prism-exercise",
   "version": "1.0.0",
   "private": true,
+  "homepage": "http://TelmoAlexandre.github.io/BluePrism2021",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
@@ -35,7 +36,9 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "serve": "webpack serve",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -77,6 +80,7 @@
     "@types/lodash": "^4.14.170",
     "@webpack-cli/generators": "^2.2.0",
     "concurrently": "^6.2.0",
+    "gh-pages": "^3.2.0",
     "json-server": "^0.16.3",
     "redux-devtools-extension": "^2.13.9"
   }
