--- a/package.json
+++ b/package.json
@@ -30,13 +30,9 @@
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"json-server --watch --delay 2000 data/db.json\"",
-    "build": "webpack --mode=production --node-env=production",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch",
-    "serve": "webpack serve",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -78,7 +74,6 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.170",
-    "@webpack-cli/generators": "^2.2.0",
     "concurrently": "^6.2.0",
     "gh-pages": "^3.2.0",
     "json-server": "^0.16.3",
